Archive2/ed/2b365d36906c68/output
main.cpp:13:1: error: 'a' does not name a type
 a B<T>::foo(a b) {return b}
 ^
